test/fail/macro-resolve-leak-out.rnp
macro foo($a) {
  let bar = 1;
  $a
}

foo({
  bar
});
---
 --> fail/macro-resolve-leak-out.rnp:7:3
  |
7 |   bar
  |   ^^^ bar is not declared
  |
